mocha/apps/pr-gitops-grafana-annotation/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pr-gitops-grafana-annotation
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - annotator.mocha.thoughtless.eu
      secretName: pr-gitops-grafana-annotation-tls
  rules:
    - host: annotator.mocha.thoughtless.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pr-gitops-grafana-annotation
                port:
                  number: 8080
